[gd_scene load_steps=9 format=2]

[ext_resource path="res://Art/Flag001.png" type="Texture" id=1]
[ext_resource path="res://Art/GreenCircle001.png" type="Texture" id=2]
[ext_resource path="res://Art/RedCircle001.png" type="Texture" id=3]
[ext_resource path="res://Art/YellowCircle001.png" type="Texture" id=4]
[ext_resource path="res://Models/Flag001/Flag001.gd" type="Script" id=5]

[sub_resource type="CircleShape2D" id=1]
radius = 39.729

[sub_resource type="CircleShape2D" id=2]
radius = 89.3826

[sub_resource type="CircleShape2D" id=3]
radius = 149.717

[node name="Flag001" type="Node2D"]
script = ExtResource( 5 )

[node name="Flag001" type="Sprite" parent="."]
position = Vector2( 47.304, -229 )
texture = ExtResource( 1 )

[node name="Close" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Close"]
shape = SubResource( 1 )

[node name="Middle" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Middle"]
shape = SubResource( 2 )

[node name="Far" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Far"]
rotation = -0.00116701
shape = SubResource( 3 )

[node name="RedCircle001" type="Sprite" parent="."]
scale = Vector2( 0.571156, 0.571156 )
texture = ExtResource( 3 )

[node name="YellowCircle001" type="Sprite" parent="."]
scale = Vector2( 0.345676, 0.345676 )
texture = ExtResource( 4 )

[node name="GreenCircle001" type="Sprite" parent="."]
scale = Vector2( 0.157768, 0.157768 )
texture = ExtResource( 2 )
[connection signal="body_entered" from="Close" to="." method="_on_Close_body_entered"]
[connection signal="body_exited" from="Close" to="." method="_on_Close_body_exited"]
[connection signal="body_entered" from="Middle" to="." method="_on_Middle_body_entered"]
[connection signal="body_exited" from="Middle" to="." method="_on_Middle_body_exited"]
[connection signal="body_entered" from="Far" to="." method="_on_Far_body_entered"]
[connection signal="body_exited" from="Far" to="." method="_on_Far_body_exited"]
